Fixing scroll issue on small screens

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -79,9 +79,9 @@ html, body {
 		
 		@media only screen and (max-width: 1200px) {	
 			width: 1200px;
-		    position: absolute;
-		    left: 50%;
-		    margin-left: -600px;
+		    position: relative;
+		    // left: 50%;
+		    // margin-left: -600px;
 		}
 		
 		&.grey {
